src/main/grammars/NOX3.bnf
// NOX3 grammar specification. This file is maintained manually.
{
  parserClass="com.enterscript.nox3languageplugin.language.psi.impl.parser.NOX3Parser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="NOX3"
  psiImplClassSuffix="Impl"
  psiPackage="com.enterscript.nox3languageplugin.language.psi"
  psiImplPackage="com.enterscript.nox3languageplugin.language.psi.impl"

  elementTypeHolderClass="com.enterscript.nox3languageplugin.language.psi.NOX3Types"
  elementTypeClass="com.enterscript.nox3languageplugin.language.psi.NOX3ElementType"
  tokenTypeClass="com.enterscript.nox3languageplugin.language.psi.NOX3TokenType"

  psiImplUtilClass="com.enterscript.nox3languageplugin.language.psi.impl.NOX3PsiImplUtil"
}

tokens = [
  CRLF
  COMMENT
  STRING
  NUMBER
  IDENTIFIER
  SEPARATOR
  ACH
  ACOS
  ACTIHGUP
  ACTZO
  ADDITM
  ADDMEN
  ADDMONTH
  ADXCIO
  ADXCPW
  ADXCTX
  ADXCUS
  ADXDBC
  ADXDBO
  ADXDBX
  ADXDCS
  ADXDIR
  ADXDLREC
  ADXDPG
  ADXFMT
  ADXFNAME
  ADXFTL
  ADXGTB
  ADXIFS
  ADXIOA
  ADXIRS
  ADXIUM
  ADXKPG
  ADXKSP
  ADXLIG
  ADXLOG
  ADXMAC
  ADXMBM
  ADXMDA
  ADXMOTHER
  ADXMPGPRO
  ADXMPGTRT
  ADXMPR
  ADXMSO
  ADXMTO
  ADXMUA
  ADXMXL
  ADXNFS
  ADXOVF
  ADXOVS
  ADXPAM
  ADXPID
  ADXPNO
  ADXROB
  ADXSAX
  ADXSCA
  ADXSEEK
  ADXSES
  ADXSQLREC
  ADXTCP
  ADXTCT
  ADXTLK
  ADXTMS
  ADXTRL
  ADXTRO
  ADXTRP
  ADXTUC
  ADXTUL
  ADXTUT
  ADXTYP
  ADXUID
  ADXUPREC
  ADXUSR
  ADXWRB
  AFFZO
  ALLOCGRP
  ANASQL
  AND
  ANP
  APPEND
  AR2
  ARR
  AS
  ASC
  ASCII
  ASH
  ASIN
  ASKUI
  ASSIGN
  AT
  ATAN
  ATAN2
  ATH
  AVG
  AWEEK
  B64DECODE
  B64ENCODE
  BLBFILE
  BLK
  BOXACT
  BOXCLR
  BOXINP
  BREAK
  BUTTON
  BY
  CALL
  CALLILOG
  CALLIU
  CALLMET
  CALLOCX
  CALLSTACK
  CALLUI
  CALLWS
  CASE
  CAST
  CH
  CHAIN
  CHAR
  CHECKIN
  CHECKPATH
  CHGFMT
  CHGSTL
  CHGTBK
  CHGTFD
  CHGTZN
  CHOOSE
  CHR_
  CLACMP
  CLACTXNBS
  CLACTXVAR
  CLALEV
  CLANAM
  CLANBS
  CLASIZ
  CLAVAR
  CLBFILE
  CLLDAP
  CLONE
  CLOSE
  CLOSECOM
  CLOSELOG
  CLOSEXML
  CNP
  CODED
  COLUMNS
  COMMIT
  CONST
  CONVXML
  COP_
  COS
  CTRANS
  CTXINFO
  CURR
  CURRBOX
  CURRIND
  CURRLEN
  DATE
  DATESYST
  DATETIME
  DATETIME_
  DATE_
  DAY
  DAYN
  DAY_
  DBGAFF
  DBGATTACH
  DBGBOX
  DBGBREAKPOINTADD
  DBGBREAKPOINTGET
  DBGBREAKPOINTLIST
  DBGBREAKPOINTREMOVE
  DBGBREAKPOINTUPDATE
  DBGCALLSTACK
  DBGDURATION
  DBGEVALUE
  DBGEVALUE2
  DBGEXCEPT
  DBGLINEOFFSET
  DBGLOG
  DBGLONG
  DBGMODE
  DBGSTR
  DCLKEY
  DECIMAL
  DEFAULT
  DELA
  DELETE
  DELETEBYKEY
  DELFILE
  DESC
  DIM
  DIMCTX
  DIR_
  DISABLE
  DISCOMBO
  DISLBOX
  DISZO
  DLGBOX
  DOUBLE
  DSPZO
  EDI
  EFFZO
  ELSE
  ELSIF
  ENABLE
  END
  ENDBOX
  ENDCASE
  ENDIF
  ENTETE
  ENVZO
  EOMONTH
  ERRBOX
  ERRL
  ERRM
  ERRMES_
  ERRN
  ERRNREMOTE
  ERRP
  ESCJSON
  EVALUE
  EVALUESDATA
  EXECSQL
  EXECWS
  EXP
  EXTENDED
  EXTERN
  EXTSIZE
  FAC
  FIELD
  FILCOM
  FILE
  FILEABRE
  FILECLA
  FILELEV
  FILENAME
  FILENUME
  FILETYP
  FILEXIST
  FILINFO
  FILLBOX
  FILPATH
  FILTER
  FIND
  FIRST
  FIX
  FLOAT
  FLUSH
  FMET
  FMETHOD
  FOLDER
  FOR
  FORMAT_
  FORMULA
  FREEGROUP
  FREEHEAP
  FREEINSTANCE
  FREEMEM
  FREESNAPSHOT
  FREESYSSNAPSHOT
  FROM
  FSTAT
  FUNC
  FUNCIU
  FUNPROG
  GDATETIME_
  GDAT_
  GETACCESSORENABLED
  GETBIT
  GETCHILDBYNAME
  GETCHILDBYTYPE
  GETENV_
  GETFIRSTCHILD
  GETFIRSTCHILDBYNAME
  GETLASTCHILD
  GETLASTCHILDBYNAME
  GETLOGNAME
  GETMODIFIED
  GETNBCHILD
  GETNEXTCHILD
  GETNEXTCHILDBYNAME
  GETPARENT
  GETROOTELEMENT
  GETSEQ
  GETSYSMODIFIED
  GETUI
  GETUUID
  GLOBAL
  GOSUB
  GOTO
  GRAPH_
  GRIZO
  HEAPDMP
  HINT
  HLPBOX
  IF
  IMAGE
  INDCUM
  INDICE
  INFBOX
  INFIMG
  INFTXT
  INPBOX
  INPMODE
  INSA
  INSLI
  INSTANCE
  INSTR
  INT
  INTEGER
  INTER
  INVFOL
  IOMODE
  ISOMESS
  ISOPENADXD
  ISREADONLY
  JSONPROTO
  KEY
  KEYLEN
  KEYNAME
  KEYUNIQ
  KILL
  LAST
  LEFTBOX
  LEFT_
  LEN
  LIBELLE
  LINK
  LISTBOX
  LISTIMP
  LN
  LOBSIZE
  LOCAL
  LOCFSHOST
  LOCFSQON
  LOCFSQPORT
  LOCK
  LOCKWAIT
  LOG
  LOGICCLOSE
  LOOK
  MASK
  MASKABR
  MASKCLA
  MASKCOU
  MASKLEV
  MASKNAM
  MASKNBF
  MASKRK
  MASKSIZ
  MAX
  MAXHEAP
  MAXMEM
  MAXROWS
  MAXTAB
  MEN
  MENCHOIX
  MESBOX
  MESS
  MESSNAME
  METHOD
  MID_
  MIN
  MKSTAT
  MOD
  MODIFIED
  MONTH
  MONTH_
  NAP
  NBIND
  NBRECORD
  NBRUSER
  NBZON
  NDAY
  NDAY_
  NEWINSTANCE
  NEXT
  NOHINT
  NOINTER
  NOLIGN
  NOLIGN1
  NOMAP
  NOT
  NULL
  NULLUUID
  NUM_
  NXLDAP
  NXT
  OBJECTEXIST
  OBJECTNBS
  OBJECTTYPE
  OBJECTVAR
  ONERRGO
  ONEVENT
  ONINTGO
  ONKEY
  OPADXD
  OPENI
  OPENIO
  OPENLOG
  OPENO
  OPLDAP
  OPSOCK
  OR
  ORDER_BY
  PARSE
  PASSWORD
  PAT
  PCOLOR
  PI
  PICK
  PICKBOX
  PIKLTB
  PMT
  POKLTB
  PRD
  PREV
  PROGCAN
  PROGLDD
  PROGSIZ
  PROGUSD
  PULLOBJECT
  PULLSCRIPT
  PUSHSCRIPT
  PUTSEQ
  QSTBOX
  RAZ
  RDSEQ
  READ
  READLOCK
  REB
  RECKEY
  RENAMEFILE
  REPEAT
  REPORT
  RESUME
  RETURN
  REVERTTOSNAPSHOT
  REVERTTOSYSSNAPHOT
  REVERTUPDTICK
  REWRITE
  REWRITEBYKEY
  RIGHT_
  RND
  ROLLBACK
  ROWCOUNT
  RPTFILE
  RPTSTAT
  RUN
  SADMEM
  SAIZO
  SAXPARSE
  SCHAR
  SECMOD
  SEEK
  SEG_
  SELDEST
  SELIMP
  SEND
  SETACCESSORENABLED
  SETBIT
  SETCOD
  SETFCT
  SETGUS
  SETINSTANCE
  SETLBOX
  SETLOB
  SETMDU
  SETMODE
  SETMOK
  SGN
  SH
  SHORTINT
  SIGMA
  SIN
  SIZED
  SLEEP
  SNAPSHOT
  SNAPSHOTENABLED
  SORTA
  SPACE_
  SQL
  SQR
  SRLDAPBS
  SRLDAPLV
  SRLDAPTR
  SSL
  STABILITY
  STARTING
  STAT1
  STATUS
  STEP
  STRDECODE
  STRENCODE
  STRING_
  SUBPROG
  SUM
  SUPLI
  SYRRECV
  SYRSEND
  SYSMODIFIED
  SYSSNAPSHOT
  SYSSNAPSHOTENABLED
  SYSTEM
  TAB_
  TAIREC
  TAN
  TH
  THEN
  THIS
  THROWERR
  TIME
  TIMESTAMP_
  TIMEVAL
  TIME_
  TINYINT
  TITCOL
  TITLED
  TITRE
  TO
  TOLOWER
  TOSDATA
  TOUPPER
  TOUUID
  TRANSMASK
  TRBEGIN
  TREEBOX
  TRTCOU
  TYPE
  TYPECTX
  UNESCJSON
  UNI
  UNIQID
  UNLOCK
  UNTIL
  UPDATE
  UPDTICK
  USING
  UUIDENT
  UUID_
  VAL
  VALUE
  VAR
  VARIABLE
  VARINIT
  VARMODE
  VBCALL
  VER_
  VIREBLC
  WEEK
  WEND
  WHEN
  WHERE
  WHILE
  WITH
  WRITE
  WRITEB
  WRNBOX
  WRSEQ
  XGETCHAR
  XOR
  YEAR
  ZC
  ZONCOU
  ZONSOR
  ZONSUI
]

file ::= element_*

private element_ ::= (property | case_block | for_block | if_block | repeat_block | while_block | COMMENT | CRLF)

property ::= IDENTIFIER SEPARATOR value {
    mixin="com.enterscript.nox3languageplugin.language.psi.impl.NOX3NamedElementImpl"
    implements="com.enterscript.nox3languageplugin.language.psi.NOX3NamedElement"
    methods=[getKey getValue getName setName getNameIdentifier]
}

case_block ::= CASE element_* (DEFAULT element_*)? (WHEN element_*)? ENDCASE

for_block ::= FOR element_* NEXT

if_block ::= IF element_* (ELSE element_*)? (ELSIF element_*)? ENDIF

repeat_block ::= REPEAT element_* UNTIL

while_block ::= WHILE element_* WEND

value ::= expression

function_call ::= (IDENTIFIER | PRINT | LEN | SQRT) '(' expression? ')'

expression ::= NUMBER | STRING | IDENTIFIER | USER | SYSDATE | function_call
